# urocenter

./: .env  App.expo.tsx  App.tsx  README.md  StorageFileApi.ts  app.json  babel.config.js  capacitor.config.ts  config.toml  index.html  package-lock.json  package.json  package.json.backup  postcss.config.cjs  postcss.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
desktop/: CMakeLists.txt
ios/LovableApp.xcworkspace/: contents.xcworkspacedata
migration-script/: migrate.ts  update-imports.ts  validate.ts
public/: manifest.json  sw.js
scripts/: generate-icons.js
shared-resources/: README.md
src/: App.cpp  App.css  App.kt  App.native.tsx  App.react-native.tsx  App.swift  App.tsx  AppRoutes.tsx  Chat.cpp  Chat.h  ChatFragment.kt  ChatViewController.swift  Dashboard.cpp  Dashboard.h  DashboardFragment.kt  DashboardViewController.swift  Database.h  index.css  main.tsx  pwa.ts  vite.config.ts
src/api/: StorageFileApi.ts
src/components/: BackButton.tsx  GoogleSignIn.tsx  HowItWorks.tsx  LanguageSelector.tsx  LoadingScreen.tsx  LoadingSpinner.tsx  PasswordInput.tsx  PaymentMethod.tsx  PaymentMethods.tsx  PhoneInput.tsx  ProfileForm.tsx  ProgressSteps.tsx  SplashScreen.tsx  VerificationCode.tsx  WaveBackground.tsx  WhatsAppSignIn.tsx  WhatsAppSupport.tsx
src/contexts/: AuthContext.tsx  CallContext.tsx  LanguageContext.tsx  ProfileContext.tsx  ThemeContext.tsx
supabase/: ASSISTANT_GUIDE.md  config.toml
(+460 files in other folders)
